# ic-message-passenger

./: configure.ac
include/: config.h
lib/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  ipc_protocol.h  ms_client  ms_client.c  ms_server  ms_server.c
src/.deps/: ms_client-ms_client.Po  ms_server-ms_server.Po
